# ccat

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  quick-release.sh
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: parser.rs  scanner.rs
src/: lib.rs  main.rs
src/analyzer/: diagnostics.rs  mod.rs  profiler.rs  security.rs  validator.rs
src/claude/: integration.rs  mod.rs  protocol.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: diagnose.rs  diff.rs  export.rs  init.rs  mod.rs  search.rs  show.rs  validate.rs  watch.rs
src/core/: cache.rs  mod.rs  parser.rs  resolver.rs  scanner.rs
src/formatter/: diff.rs  json.rs  mod.rs  text.rs  tree.rs
